Added the images

--- a/Manchooter/about.html
+++ b/Manchooter/about.html
@@ -409,7 +409,9 @@
     <script src="assets/js/main.js"></script>
 
     <!-- CHATBOT WIDGET -->
-    <button id="chatbot-button" aria-label="Open chat" title="Chat with us">💬</button>
+    <button id="chatbot-button" aria-label="Open chat" title="Chat with us">
+      💬
+    </button>
     <div id="chatbot-window">
       <div class="chatbot-header">
         <h3>Chat with Us</h3>
@@ -417,7 +419,12 @@
       </div>
       <div id="chatbot-messages"></div>
       <div class="chatbot-input-area">
-        <input type="text" id="chatbot-input" placeholder="Type your message..." aria-label="Chat message input">
+        <input
+          type="text"
+          id="chatbot-input"
+          placeholder="Type your message..."
+          aria-label="Chat message input"
+        />
         <button id="chatbot-send" aria-label="Send message">Send</button>
       </div>
     </div>
