--- a/Manchooter/contact.html
+++ b/Manchooter/contact.html
@@ -257,7 +257,7 @@
         </div>
       </section>
 
-      <!-- MAP SECTION (Placeholder) -->
+      <!-- MAP SECTION -->
       <section
         style="
           background-color: var(--color-gray-light);
@@ -266,35 +266,27 @@
       >
         <div class="container">
           <h2 style="text-align: center; margin-bottom: var(--spacing-xl)">
-            Our Global Reach
+            Find Us in Nairobi
           </h2>
           <div
             style="
               width: 100%;
-              height: 400px;
-              background: linear-gradient(
-                135deg,
-                var(--color-white) 0%,
-                var(--color-gray-light) 100%
-              );
-              border: 2px solid var(--color-border);
-              border-radius: 8px;
               display: flex;
-              align-items: center;
               justify-content: center;
-              color: var(--color-text-muted);
-              font-size: var(--font-size-lg);
-              font-weight: 500;
+              border-radius: 8px;
+              overflow: hidden;
+              box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
             "
           >
-            🌍 Interactive map would go here<br />
-            <span
-              style="
-                font-size: var(--font-size-sm);
-                margin-top: var(--spacing-sm);
-              "
-              >Replace with Mapbox or Google Maps integration</span
-            >
+            <iframe
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d510564.65107988653!2d36.5177334104462!3d-1.3031873859975642!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x182f1172d84d49a7%3A0xf7cf0254b297924c!2sNairobi!5e0!3m2!1sen!2ske!4v1763810448051!5m2!1sen!2ske"
+              width="600"
+              height="450"
+              style="border:0;"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+            ></iframe>
           </div>
         </div>
       </section>
@@ -493,7 +485,9 @@
     <script src="assets/js/main.js"></script>
 
     <!-- CHATBOT WIDGET -->
-    <button id="chatbot-button" aria-label="Open chat" title="Chat with us">💬</button>
+    <button id="chatbot-button" aria-label="Open chat" title="Chat with us">
+      💬
+    </button>
     <div id="chatbot-window">
       <div class="chatbot-header">
         <h3>Chat with Us</h3>
@@ -501,7 +495,12 @@
       </div>
       <div id="chatbot-messages"></div>
       <div class="chatbot-input-area">
-        <input type="text" id="chatbot-input" placeholder="Type your message..." aria-label="Chat message input">
+        <input
+          type="text"
+          id="chatbot-input"
+          placeholder="Type your message..."
+          aria-label="Chat message input"
+        />
         <button id="chatbot-send" aria-label="Send message">Send</button>
       </div>
     </div>
