--- a/Manchooter/index.html
+++ b/Manchooter/index.html
@@ -278,7 +278,7 @@
       <!-- ABOUT PREVIEW SECTION -->
       <section>
         <div class="container">
-          <h2 class="section-title">Our Mission</h2>
+          <h2 class="section-title">Our Values</h2>
           <div class="about__mission">
             <p>
               We believe technology should empower communities. At Salamander
@@ -289,42 +289,24 @@
           </div>
 
           <div class="about__values">
-            <div class="about__value-card">
-              <div class="about__value-icon icon-collaboration"></div>
+            <div class="about__value-card" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=500&h=300&fit=crop')">
+              <div class="about__value-icon"></div>
               <h3>Collaboration</h3>
-              <p
-                style="
-                  color: var(--color-text-muted);
-                  font-size: var(--font-size-sm);
-                  line-height: var(--line-height-relaxed);
-                "
-              >
+              <p>
                 Working together across disciplines to create better solutions.
               </p>
             </div>
-            <div class="about__value-card">
-              <div class="about__value-icon icon-innovation"></div>
+            <div class="about__value-card" style="background-image: url('https://images.unsplash.com/photo-1552168324-d612d77725e3?w=500&h=300&fit=crop')">
+              <div class="about__value-icon"></div>
               <h3>Innovation</h3>
-              <p
-                style="
-                  color: var(--color-text-muted);
-                  font-size: var(--font-size-sm);
-                  line-height: var(--line-height-relaxed);
-                "
-              >
+              <p>
                 Pushing boundaries and exploring new ideas in tech.
               </p>
             </div>
-            <div class="about__value-card">
-              <div class="about__value-icon icon-growth"></div>
+            <div class="about__value-card" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=500&h=300&fit=crop')">
+              <div class="about__value-icon"></div>
               <h3>Growth</h3>
-              <p
-                style="
-                  color: var(--color-text-muted);
-                  font-size: var(--font-size-sm);
-                  line-height: var(--line-height-relaxed);
-                "
-              >
+              <p>
                 Continuous learning and development for all community members.
               </p>
             </div>
