--- a/Manchooter/index.html
+++ b/Manchooter/index.html
@@ -289,21 +289,34 @@
           </div>
 
           <div class="about__values">
-            <div class="about__value-card" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=500&h=300&fit=crop')">
+            <div
+              class="about__value-card"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=500&h=300&fit=crop');
+              "
+            >
               <div class="about__value-icon"></div>
               <h3>Collaboration</h3>
               <p>
                 Working together across disciplines to create better solutions.
               </p>
             </div>
-            <div class="about__value-card" style="background-image: url('https://images.unsplash.com/photo-1552168324-d612d77725e3?w=500&h=300&fit=crop')">
+            <div
+              class="about__value-card"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1552168324-d612d77725e3?w=500&h=300&fit=crop');
+              "
+            >
               <div class="about__value-icon"></div>
               <h3>Innovation</h3>
-              <p>
-                Pushing boundaries and exploring new ideas in tech.
-              </p>
+              <p>Pushing boundaries and exploring new ideas in tech.</p>
             </div>
-            <div class="about__value-card" style="background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=500&h=300&fit=crop')">
+            <div
+              class="about__value-card"
+              style="
+                background-image: url('https://images.unsplash.com/photo-1552664730-d307ca884978?w=500&h=300&fit=crop');
+              "
+            >
               <div class="about__value-icon"></div>
               <h3>Growth</h3>
               <p>
